# ZyForgeSim

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: benchmark.yml  python.yml  rust.yml
benchmarks/: .gitkeep
benchmarks/ci/: run_golden.sh
configs/: gpu_type_registry.yaml
configs/analytics/: cost.yaml
configs/clusters/: gang_m6.yaml  gang_timeout_m6.yaml  inference_llama.yaml  mig_single.yaml  preemption_preemptive.yaml  preemption_priority.yaml  priority_fifo.yaml  priority_scheduler.yaml  rl_small.yaml  single_gpu.yaml  small_h100.yaml  topology_h100.yaml  topology_penalty.yaml
configs/hardware/: h100_80gb.yaml  h200_141gb.yaml
configs/mig/: h100_80gb.yaml
configs/profiles/: gpt-13b.yaml  llama-70b.yaml  llama-7b.yaml  mig-dispatch-test.yaml  quota-test-a.yaml  quota-test-b.yaml
configs/workloads/: gang_m6.yaml  gang_timeout_m6.yaml  inference_llama.yaml  mig_m4.yaml  preemption_demo.yaml  priority_demo.yaml  rl_small.yaml  schema_inference.yaml  synthetic_m1.yaml  topology_m5.yaml  topology_penalty_m5.yaml
crates/forgesim-cli/: Cargo.toml
crates/forgesim-cli/src/: main.rs
crates/forgesim-cli/tests/: cli_integration.rs
crates/forgesim-config/: Cargo.toml
crates/forgesim-config/src/: forge_bundle.rs  lib.rs  mig.rs  serving_trace.rs  trace.rs
crates/forgesim-config/tests/: integration.rs
crates/forgesim-core/: Cargo.toml
crates/forgesim-core/src/: cluster.rs  decision_log.rs  engine.rs  error.rs  events.rs  inference.rs  lib.rs  mig.rs  models.rs  resource.rs  rl.rs  snapshot.rs  topology.rs
crates/forgesim-metrics/: Cargo.toml
crates/forgesim-metrics/src/: benchmark.rs  lib.rs
crates/forgesim-py/: Cargo.toml
crates/forgesim-py/src/: lib.rs
crates/forgesim-scheduler/: Cargo.toml
crates/forgesim-scheduler/src/: bestfit.rs  common.rs  fifo.rs  forge.rs  lib.rs  preemptive.rs  priority.rs  stubs.rs
docs/: architecture.md  benchmark_platform.md  benchmark_score.md  forge_input.md  manual_test_benchmark_platform.md  milestones.md  openai_shim.md  ui_dashboard.md  ui_roadmap.md
docs/design/: m5_topology.md  m6_scheduler_features.md
python/baselines/: ppo_cleanrl.py
python/examples/: live_dashboard.py  plot_run.py  run_fifo.py  run_rl_env.py
python/forgesim/: __init__.py  cli.py  theme.py
python/forgesim/adapters/: __init__.py  bundle.py  crd.py  profiles.py  serving_trace.py  simple_yaml.py  trace.py
python/forgesim/benchmarks/: aiperf_adapter.py  sweep.py  twin_store.py
python/forgesim/dashboard/: __init__.py  __main__.py  state.py
python/forgesim/envs/: __init__.py  forge_gym.py
python/forgesim/server/: __init__.py  app.py  openai_shim.py
python/forgesim/viz/: __init__.py  gantt.py  heatmap.py  plots.py  timeline.py
python/forgesim/workloads/: __init__.py  generate_synthetic.py
python/tests/: test_aiperf_twin.py  test_benchmark_platform.py  test_dashboard.py  test_forgesim.py  test_integration_cli.py  test_openai_shim.py  test_rl_env.py  test_scheduling_metrics.py  test_server_scheduler.py  test_unit_adapters.py  test_viz.py
scripts/: common.sh  fix_pyexpat.sh  run_live_dashboard.sh  run_web_api.sh  run_web_dashboard.sh  run_web_ui.sh  setup_dev.sh  stop_web_dashboard.sh
tests/fixtures/aiperf/: sample_result.json
tests/fixtures/benchmark/: score_vector.json
tests/fixtures/forge/cluster/: gpu-nodes.yaml
tests/fixtures/forge/jobs/: gang-scheduling.yaml  llama-pretrain.yaml  mig-inference.yaml
tests/fixtures/forge/quotas/: teams.yaml
tests/fixtures/forge_quota/cluster/: nodes.yaml
tests/fixtures/forge_quota/jobs/: job-a.yaml  job-b.yaml
tests/fixtures/forge_quota/quotas/: quota.yaml
tests/fixtures/traces/: fifo_match.jsonl  gang_m6.jsonl  indexed_gpus.jsonl  serving_llama.json  serving_llama.jsonl
tests/fixtures/viz/: jobs_small.json
tests/fixtures/workloads/: invalid_gang.yaml  synthetic_llm_peak.yaml
web/: .env.example  .env.local  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/src/: middleware.ts
web/src/app/: DashboardHome.tsx  globals.css  layout.tsx  page.tsx
web/src/app/api/auth/login/: route.ts
web/src/app/api/auth/logout/: route.ts
web/src/app/api/auth/me/: route.ts
web/src/app/benchmark/: page.tsx
web/src/app/login/: LoginForm.tsx  page.tsx
web/src/app/what-if/: page.tsx
web/src/components/: ClusterView.tsx  ComparePanel.tsx  GanttChart.tsx  HeaderAuth.tsx  MetricsCharts.tsx  MigView.tsx  QueueTable.tsx  ReplayControls.tsx  TopologyView.tsx  ui.tsx
web/src/lib/: api.ts  auth.ts  navigation.ts  require-auth.ts  theme.ts
web/src/store/: useReplayStore.ts
web/src/styles/: zyvor-tokens.css
web/src/types/: simulation.ts
