[workspace]
resolver = "2"
members = [
    "crates/forgesim-core",
    "crates/forgesim-scheduler",
    "crates/forgesim-config",
    "crates/forgesim-metrics",
    "crates/forgesim-cli",
    "crates/forgesim-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["hypersdk-team"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
