[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "forgesim"
version = "0.1.0"
description = "Discrete-event GPU cluster scheduler simulator inspired by Zyvor Forge"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyyaml>=6.0"]

[project.scripts]
forge-sim-py = "forgesim.cli:main"

[tool.maturin]
manifest-path = "crates/forgesim-py/Cargo.toml"
python-source = "python"
module-name = "forgesim._forgesim"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
