[package]
name = "forgesim-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeSim command-line interface"

[[bin]]
name = "forge-sim"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
forgesim-config = { path = "../forgesim-config" }
forgesim-metrics = { path = "../forgesim-metrics" }
