[package]
name = "forgesim-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeSim YAML configuration loading"

[dependencies]
forgesim-core = { path = "../forgesim-core" }
forgesim-scheduler = { path = "../forgesim-scheduler" }
forgesim-metrics = { path = "../forgesim-metrics" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
