[package]
name = "forgesim-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeSim discrete-event simulation core"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
