[package]
name = "forgesim-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeSim simulation metrics"

[dependencies]
forgesim-core = { path = "../forgesim-core" }
serde = { workspace = true }
serde_json = { workspace = true }
