[package]
name = "forgesim-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Python bindings for ForgeSim"

[lib]
name = "forgesim"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
forgesim-core = { path = "../forgesim-core" }
forgesim-config = { path = "../forgesim-config" }
forgesim-metrics = { path = "../forgesim-metrics" }
