[package]
name = "forgesim-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ForgeSim scheduling policies"

[dependencies]
forgesim-core = { path = "../forgesim-core" }

[dev-dependencies]
forgesim-core = { path = "../forgesim-core" }
